# PatchCore

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE.MD  Package.swift  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
PatchCore/src/main/cpp/: CMakeLists.txt
PatchCore/src/main/cpp/include/patchcore/callback/: OnEndBuffer.hpp  OnStartBuffer.hpp
PatchCore/src/main/cpp/include/patchcore/dsp/: WaveForm.hpp  dsp.h
PatchCore/src/main/cpp/include/patchcore/dsp/osc/: BandLimitedSaw.hpp  BandLimitedSimpleSquare.hpp  BandLimitedSquare.hpp  BandLimitedTriangle.hpp  NativeWaveOsc.hpp  Noise.hpp
PatchCore/src/main/cpp/include/patchcore/dsp/waveshaper/: SimpleWaveShaper.hpp
PatchCore/src/main/cpp/include/patchcore/dsp/wavetable/: DefaultWaveTableProvider.hpp  SawWaveTable.hpp  SimpleSquareWaveTable.hpp  SquareWaveTable.hpp  TriangleWaveTable.hpp  WaveTable.hpp  WaveTableProvider.hpp
PatchCore/src/main/cpp/include/patchcore/module/: Module.hpp  ModuleParameter.hpp  PatchModule.hpp  PolyModule.hpp  PolyProxyModule.hpp  PolyProxyPatchModule.hpp  Router.hpp
PatchCore/src/main/cpp/include/patchcore/module/buffer/: BlockConfig.hpp  BlockContext.hpp  BufferedValue.hpp  FixedBuffer.hpp
PatchCore/src/main/cpp/include/patchcore/module/factory/: DefaultModuleFactory.hpp  ModuleFactory.hpp
PatchCore/src/main/cpp/include/patchcore/module/input/: ExposedModuleInput.hpp  ExposedModuleUserInput.hpp  Input.hpp  ModuleInput.hpp  PolyProxyInput.hpp  PolyProxyUserInput.hpp  ProxyModuleInput.hpp  ProxyModuleUserInput.hpp  UserInput.hpp
PatchCore/src/main/cpp/include/patchcore/module/output/: ExposedModuleOutput.hpp  LedOutput.hpp  ModuleOutput.hpp  Output.hpp  PolyDemuxOutput.hpp  PolyExposedOutput.hpp  PolyProxyOutput.hpp  ProxyModuleOutput.hpp
PatchCore/src/main/cpp/include/patchcore/module/router/: AbstractRouter.hpp  GraphRouter.hpp  Router.hpp
PatchCore/src/main/cpp/include/patchcore/modules/: AttenuverterModule.hpp  ConstModule.hpp  DCFilterModule.hpp  DelayLineModule.hpp  DividerModule.hpp  FixedHardClipModule.hpp  HalfRectifierModule.hpp  IndicatorModule.hpp  InverseModule.hpp  LinearMixModule.hpp  LinearMixWithLimitModule.hpp  MixCrossFadeModule.hpp  NoiseModule.hpp  PanCrossFadeModule.hpp  PassModule.hpp  SampleAndHoldModule.hpp  VCAModule.hpp
PatchCore/src/main/cpp/include/patchcore/modules/envelope/: BaseEnvelope.hpp  (+2 more)
PatchCore/src/main/cpp/include/patchcore/synth/: AbstractSynth.hpp  BufferedSynth.hpp  ModularSynth.hpp  StereoBlock.hpp
PatchCore/src/main/cpp/include/patchcore/test/: ModularSynthTester.hpp
PatchCore/src/main/cpp/patchcore/algorithm/: Demucron.hpp  Kahn.hpp  RemoveUnreachableNodes.hpp  Tarjan.hpp
PatchCore/src/main/cpp/patchcore/dsp/osc/: BandLimitedSaw.cpp  BandLimitedSimpleSquare.cpp  BandLimitedSquare.cpp  BandLimitedTriangle.cpp  NativeWaveOsc.cpp  Noise.cpp
PatchCore/src/main/cpp/patchcore/dsp/waveshaper/: SimpleWaveShaper.cpp
PatchCore/src/main/cpp/patchcore/dsp/wavetable/: DefaultWaveTableProvider.cpp
PatchCore/src/main/cpp/patchcore/module/: Module.cpp  ModuleParameter.cpp  PatchModule.cpp  PolyModule.cpp  PolyProxyModule.cpp  PolyProxyPatchModule.cpp  Router.cpp
PatchCore/src/main/cpp/patchcore/module/factory/: DefaultModuleFactory.cpp
PatchCore/src/main/cpp/patchcore/module/input/: ModuleInput.cpp
PatchCore/src/main/cpp/patchcore/module/output/: ModuleOutput.cpp
PatchCore/src/main/cpp/patchcore/module/router/: GraphRouter.cpp  GraphRouterDiagnostics.cpp  Router.cpp
PatchCore/src/main/cpp/patchcore/modules/: AttenuverterModule.cpp  ConstModule.cpp  DCFilterModule.cpp  DelayLineModule.cpp  DividerModule.cpp  FixedHardClipModule.cpp  HalfRectifierModule.cpp  IndicatorModule.cpp  InverseModule.cpp  LinearMixModule.cpp  LinearMixWithLimitModule.cpp  MixCrossFadeModule.cpp  NoiseModule.cpp  PanCrossFadeModule.cpp  PassModule.cpp  SampleAndHoldModule.cpp  VCAModule.cpp
PatchCore/src/main/cpp/patchcore/modules/envelope/: ADSREnvelopeModule.cpp  BaseEnvelope.cpp  FadeEnvelopeModule.cpp
PatchCore/src/main/cpp/patchcore/modules/input/: AbstractKeyboard.cpp
PatchCore/src/main/cpp/patchcore/modules/reverb/: DattorroReverbModule.cpp  FreeverbReverbModule.cpp
PatchCore/src/main/cpp/patchcore/modules/vcf/: BiQuadVCFModule.cpp  VCF.cpp
PatchCore/src/main/cpp/patchcore/modules/vco/: BaseVCO.cpp  MultiVCOModule.cpp
PatchCore/src/main/cpp/patchcore/synth/: BufferedSynth.cpp  ModularSynth.cpp
PatchCore/src/main/cpp/patchcore/test/: ModularSynthTester.cpp
PatchCore/src/main/cpp/private_include/: GraphRouterDiagnostics.hpp  PatchCoreLogger.hpp  timeUtils.h
PatchCore/src/main/cpp/utils/: PatchCoreLogger.cpp  timeUtils.cpp
PatchCoreMultiplatform/src/androidMain/cpp/: CMakeLists.txt
PatchCoreMultiplatform/src/androidMain/cpp/android/AudioInterface/: OboeAudioInterface.cpp  OboeAudioInterface.hpp
PatchCoreMultiplatform/src/androidMain/cpp/android/AudioInterface/utils/: CpuLoadCounter.cpp
PatchCoreMultiplatform/src/androidMain/cpp/jni/: AudioInterfaceJni.cpp  DefaultModuleFactoryJni.cpp  DefaultWaveTableProviderJni.cpp  ModularSynthJni.cpp  ModuleFactoryJni.cpp  ModuleJni.cpp  PatchModuleJni.cpp  PolyModuleJni.cpp  WaveTableProviderJni.cpp
PatchCoreMultiplatform/src/androidMain/cpp/jni/factory/: DefaultModuleFactoryJni.cpp  DefaultWaveTableProviderJni.cpp  ModuleFactoryJni.cpp  WaveTableProviderJni.cpp
PatchCoreMultiplatform/src/androidMain/cpp/jni/module/: ModuleJni.cpp  PatchModuleJni.cpp  PolyModuleJni.cpp  UserInputJni.cpp
PatchCoreMultiplatform/src/androidMain/cpp/jni/module/output/: PolyDemuxOutputJni.cpp
PatchCoreMultiplatform/src/androidMain/cpp/jni/modules/: IndicatorModuleJni.cpp  KeyboardModuleJni.cpp
PatchCoreMultiplatform/src/androidMain/cpp/jni/test/: ModularSynthTesterJni.cpp
PatchCoreTest/src/main/cpp/: CMakeLists.txt  jni_runner.cpp
PatchCoreTest/src/main/cpp/test/: TestBlockUtils.hpp  copyModuleTest.cpp  factoryTest.cpp  graphRouterTest.cpp  keyboardTest.cpp  moduleTest.cpp  patchModuleTest.cpp  performanceTest.cpp  polyModuleTest.cpp  synthTest.cpp  wavetableProviderTest.cpp
(+403 files in other folders)
